objects/Global_Profile_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global constants for different profiles</description>
    <fields>
        <fullName>General_Inquiry_Origin_Default__c</fullName>
        <label>General Inquiry Origin Default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Inquiry_Priority_Default__c</fullName>
        <label>General Inquiry Priority Default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Inquiry_Status_Default__c</fullName>
        <label>General Inquiry Status Default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Inquiry_Type_Default__c</fullName>
        <label>General Inquiry Type Default</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Group__c</fullName>
        <description>The functional group of the user - used in areas such as creating cases/general inquiries</description>
        <label>User Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Global Profile Settings</label>
</CustomObject>